[package]
name = "text-generation"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "text-generation"
path = "src/main.rs"
[dependencies]
etagere = "0.2.8"
cosmic-text = "0.9"
lru = "0.12"
# Our graphics API
wgpu = "0.17.1"
glyphon = {git="https://github.com/grovesNL/glyphon.git",rev="1de354c05da2414afdbd5ff0fe2b4104dcf7d414"}

# Opening windows in a cross-platform way
winit = "0.28"
# Organized logging output, WGPU uses this for errors and info
log = "0.4"
env_logger = "0.10"
# Pollster is a very simple async runtime. We can't ignore async since we want to be web-compatible.
pollster = "0.3.0"
#yuh
image = "0.24.7"
bytemuck = { version = "1.14.0", features = ["derive"] }


[profile.dev.package.backtrace]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
